Fixing issue where white-space:nowrap wasn't working In <= IE 10
#391

--- a/src/sass/listing/_table.scss
+++ b/src/sass/listing/_table.scss
@@ -5,6 +5,7 @@
 	// the first row sets the widths of all subsequent rows
 	table-layout: fixed;
 	td,th {
+		word-wrap: normal;
 		white-space: nowrap;
 	}
 
